OrderBook initial implementation

--- a/src/main/resources/fm-session.ini
+++ b/src/main/resources/fm-session.ini
@@ -3,7 +3,7 @@ ConnectionType=initiator
 ReconnectInterval=60
 HeartBtInt=30
 LogFactory=screen
-ScreenLogShowIncoming=Y
+ScreenLogShowIncoming=N
 MessageStoreFactory=memory
 ResetOnLogout=Y
 ResetOnDisconnect=Y
@@ -20,3 +20,5 @@ SocketConnectPort=16122
 SocketUseSSL=N
 UseDataDictionary=Y
 DataDictionary=FIX42fm.xml
+ValidateUnorderedGroupFields=N
+ValidateUserDefinedFields=N
